@startuml
title entity層のクラス図
hide empty members
left to right direction

package entity{
    class Customer{
        -customerId: Integer
        -customerName: String
        -customerNameKana: String
        -customerAddress1: String
        -customerAddress2: String
        -customerPhoneNumber: String
        -customerMailAdress:String
        -customerUserName: String
        -customerPassword: String
        -customerRegisterDate: String
    }

    class Order{
        -orderId: Integer
        -orderDate: String
        -amountTotal: Integer
        -orderDetail: OrderDetail
        -orderStatus: OrderStatus
        -payMethod: PaymentMethod
        -customerIdId: IntegerId
    }

    class OrderDetail{
        -orderDetailId: Integer
        -count: Integer
        -productId: Integer
    }
    
    class PaymentMethod{
    	-payMethodId: Integer
    	-payMethodName: String
    }

    class OrderStatus{
        orderStatusId: Integer
        orderStatusName: String
    }

    class Product{
        -prodId: Integer
        -prodName: String
        -price: Integer
        -imageUrl: String
        -prodCategory: ProductCategory
        -prodStock: ProduckStock
    }

    class ProductCategory{
        -prodCategoryId: Integer
        -prodCategoryName: String
    }

    class ProductStock{
        -prodStockId: Integer
        -quantity: Integer
    }

    class Employee{
        -empId: Integer
        -empName: String
        -empNameKana: String
        -department: Department
        -empAccount: EmployeeAccount
    }

    class Department{
        -deptId: Integer
        -deptName: String
    }

    class EmployeeAccount{
    	-empId: Integer
        -empAccountId: Integer
        -empAccountName: String
        -password: String
    }
}

Customer <--> Order
Order --> OrderStatus
Order --> OrderDetail
Order --> PaymentMethod
Product --> ProductStock
Product --> ProductCategory
Employee --> EmployeeAccount
Employee --> Department
@enduml